# jarvis.agi

./: .env.example  .gitignore  Dockerfile  README.md  ROADMAP.md  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt
config/: settings.yaml
docs/: MULTIMODAL.md
frontend/: .env.example  eslint.config.js  index.html  next.config.mjs  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ChatPanel.tsx  IntegrationCard.tsx  MessageBubble.tsx  ProtectedShell.tsx  Providers.tsx  Sidebar.tsx  StatsBar.tsx  VoiceWave.tsx
frontend/hooks/: useEnvVars.ts  useVoice.tsx  useWebSocket.ts
frontend/lib/: apiBase.ts
frontend/src/: App.tsx  index.css
frontend/store/: onboarding.ts  provider.ts
frontend/types/: index.ts
jarvis/: __init__.py  __main__.py
jarvis/agi/: __init__.py  ambient.py  emotion.py  multimodal.py  self_improve.py  world_model.py
jarvis/api/: __init__.py  main.py  ws.py
jarvis/core/: __init__.py  agent.py  autonomous_bootstrap.py  autonomous_config.py  memory.py  orchestrator.py  planner.py  proactive.py  scheduler.py  tools.py
jarvis/integrations/: __init__.py  base.py  browser.py  code_exec.py  computer_control.py  discord_int.py  filesystem.py  finance.py  github_int.py  gmail.py  google_calendar.py  google_drive.py  home_assistant.py  instagram.py  knowledge_base.py  news.py  notion.py  screen.py  slack.py  (+5 more)
tests/: conftest.py  test_agent.py  test_autonomous_config.py  test_llm_messages.py  test_memory.py  test_multimodal.py  test_tools.py
(+62 files in other folders)
