[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "jarvis-agi"
version = "0.1.0"
description = "Free, self-hosted AI agent that unifies Gmail, Discord, YouTube, Instagram and more with voice control"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

[project.scripts]
jarvis = "jarvis.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["jarvis*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
